WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45788
[chromium] fix http/tests/security/local-user-CSS-from-remote.html
https://bugs.webkit.org/show_bug.cgi?id=45788
Summary
[chromium] fix http/tests/security/local-user-CSS-from-remote.html
Tony Chang
Reported
2010-09-14 16:03:46 PDT
[chromium] fix http/tests/security/local-user-CSS-from-remote.html
Attachments
Patch
(3.23 KB, patch)
2010-09-14 16:05 PDT
,
Tony Chang
tkent
: review+
tkent
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2010-09-14 16:05:42 PDT
Created
attachment 67616
[details]
Patch
Tony Chang
Comment 2
2010-09-14 16:07:32 PDT
This depends on
http://codereview.chromium.org/3425004/show
, which means it will have a deps roll.
Kent Tamura
Comment 3
2010-09-14 16:09:35 PDT
Comment on
attachment 67616
[details]
Patch OK.
Tony Chang
Comment 4
2010-09-14 18:25:25 PDT
Committed
r67524
: <
http://trac.webkit.org/changeset/67524
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug