2010-09-14  Tony Chang  <tony@chromium.org>

Reviewed by Kent Tamura.

        [chromium] fix http/tests/security/local-user-CSS-from-remote.html
        https://bugs.webkit.org/show_bug.cgi?id=45788

        * platform/chromium/test_expectations.txt:
2010-09-14  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] fix http/tests/security/local-user-CSS-from-remote.html
        https://bugs.webkit.org/show_bug.cgi?id=45788

        * DEPS: Include webkit_support::LocalFileToDataURL
2010-09-14  Tony Chang  <tony@chromium.org>

        Reviewed by Kent Tamura.

        [chromium] fix http/tests/security/local-user-CSS-from-remote.html
        https://bugs.webkit.org/show_bug.cgi?id=45788

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::setUserStyleSheetLocation): use a base64 url like in Chrome

Canonical link: https://commits.webkit.org/58251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67524 268f45cc-cd09-0410-ab3c-d52691b4dbfc